--- a/css/style.css
+++ b/css/style.css
@@ -274,8 +274,8 @@ main::before {
 main .info {
   position: absolute;
   top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  /* left: 50%; */
+  transform: translateY(-50%);
   z-index: 2;
   max-width: 600px;
   text-align: start;
@@ -400,6 +400,7 @@ main  .btn:hover {
   color: #2c3e50;
     font-size: 16px;
     font-weight: bold;
+    text-align: justify;
 }
 
 /*------------End about-------------------*/
